--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ section.project {
 }
 
 .collage-container {
-	max-width: 100%;
+	max-width: fit-content;
 	position: relative;
 	display: flex;
 	align-items: flex-start;
@@ -264,7 +264,10 @@ section.project {
 }
 
 .project-container {
-	margin-left: 120px;
+	margin-left: 20px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
 
 .view-all-container h3,
@@ -273,7 +276,7 @@ p {
 }
 
 .view-href {
-	max-width: auto;
+	flex-shrink: 0;
 	flex: 1;
 	font-size: calc(16px + 8 * (100vw / 1920));
 	font-weight: 600;
@@ -293,7 +296,7 @@ p {
 
 section.blogs {
 	margin-top: 50px;
-	margin-left: 120px;
+	margin-left: 30px;
 	margin-bottom: 100px;
 }
 
@@ -348,7 +351,7 @@ section.products h3 {
 	margin-bottom: 50px;
 	display: flex;
 	flex-direction: row;
-	gap: 20px;
+	gap: 10px;
 	justify-content: center;
 }
 
@@ -357,7 +360,7 @@ section.products h3 {
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
-	gap: 20px;
+	gap: 10px;
 	max-width: fit-content;
 }
 
@@ -522,12 +525,27 @@ footer {
 	justify-content: space-between;
 }
 
-@media screen and (max-width: 1400px) {
+@media screen and (min-width: 961px) and (max-width: 1400px) {
+	.laptop {
+		display: none;
+	}
 	.what-container {
 		gap: 20px;
 	}
 	.what-part {
 		gap: 20px;
+	}
+	section.blogs {
+		margin-left: 0;
+	}
+	.blogs-h3 {
+		text-align: center;
+	}
+	.blogs-container {
+		justify-content: center;
+	}
+	.costumers-container {
+		justify-content: center;
 	}
 }
 
